--- a/UWPHelloWorld/MainPage.xaml
+++ b/UWPHelloWorld/MainPage.xaml
@@ -8,12 +8,16 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel HorizontalAlignment="Center">
-            <TextBlock Text="Hello, world!" Margin="20" Width="200" HorizontalAlignment="Left"/>
-            <TextBlock Text="Write your name." Margin="20" Width="200" HorizontalAlignment="Left"/>
-            <TextBox x:Name="nameTextBox" Width="280" Margin="20" HorizontalAlignment="Left"/>
-            <Button x:Name="button" Content="Click Me" Margin="20" Click="button_Click" />
-            <TextBlock x:Name="txtBlock" HorizontalAlignment="Left" Margin="20" />
-        </StackPanel>
+        
+        <ListView x:Name="homeList" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Button  Content="{Binding Name}" Click="Button_Click"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
     </Grid>
 </Page>
